# Polynomial-Calculator-with-Qt

./: CMakeLists.txt  LICENSE  README.md  expressionEveluationCalculator.cpp  expressionEveluationCalculator.hpp  main.cpp  polynomial.cpp  polynomial.hpp  widget.cpp  widget.h  widget.ui
